--- a/config/ollama.json5
+++ b/config/ollama.json5
@@ -46,7 +46,7 @@
     "config": {
       "agent_name": "IRIS",
       "model": "llama3.2",
-      "ollama_base_url": "http://localhost:11434",
+      "base_url": "http://localhost:11434",
       "temperature": 0.7,
       "num_ctx": 4096,
       "timeout": 120,
