--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,55 +5,128 @@ description = "OM1 - a modern agent and robotics runtime system"
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
-    "ultralytics",
+    # Core - Messaging & Communication
+    "eclipse-zenoh>=1.4.0",
+    "websockets>=12.0",
+    "aiohttp>=3.9.3",
+    # Core - Web Framework
+    "fastapi>=0.110.0",
+    "uvicorn>=0.27.1",
+    "python-multipart>=0.0.9",
+    # Core - Audio Processing
     "soundfile",
     "sounddevice",
-    "pynmeagps",
-    "bleak",
-    "bezier",
-    "scipy",
-    "matplotlib",
+    "audiosegment",
+    "pyaudio",
+    "pydub>=0.25.1",
+    # Core - Configuration & Utils
+    "python-dotenv>=1.0.1",
     "json5",
     "jsonschema",
     "pycdr2",
-    "eclipse-zenoh>=1.4.0",
-    "audiosegment",
-    "pyaudio",
-    "openai>=1.59.5",
-    "pillow>=11.1.0",
-    "python-dotenv>=1.0.1",
-    "typer>=0.15.1",
-    "opencv-python",
-    "deepface>=0.0.81",
-    "tensorflow>=2.15.0",
-    "tf_keras>=2.15.0",
-    "web3",
-    "numpy",
-    "cdp-sdk==0.21.0",
-    "hid",
-    "cv_bridge",
-    "torch",
-    "torchvision",
-    "pyserial",
-    "py-mjpeg",
-    "fastapi>=0.110.0",
-    "uvicorn>=0.27.1",
-    "websockets>=12.0",
-    "om1-modules @ git+https://github.com/OpenMind/om1-modules.git@eed03c9ccaf00641c706404e32f5b161804512a8",
-    "aiohttp>=3.9.3",
-    "python-multipart>=0.0.9",
     "jinja2>=3.1.3",
-    "pydub>=0.25.1",
-    "pynput>=1.8.1",
-    "dimo-python-sdk @ git+https://github.com/openminddev/dimo-python-sdk.git@6b47fcd28654a4145cedee649a0999a8eb08a2f6",
+    # Core - Image & Math
+    "pillow>=11.1.0",
+    "numpy",
+    "bezier",
+    "scipy",
+    "matplotlib",
+    "py-mjpeg",
+    # Core - CLI & API
+    "typer>=0.15.1",
+    "requests>=2.31.0",
     "nest-asyncio>=1.6.0",
+    "openai>=1.59.5",
+    # Core - ROS/Robotics Bridge
+    "cv_bridge",
+    "om1-modules @ git+https://github.com/OpenMind/om1-modules.git@eed03c9ccaf00641c706404e32f5b161804512a8",
 ]
 
 [project.optional-dependencies]
-dds = [
-    "cyclonedds==0.10.2"
+# Vision & ML - Heavy (~2GB): TensorFlow, PyTorch, face detection
+vision = [
+    "opencv-python",
+    "tensorflow>=2.15.0",
+    "tf_keras>=2.15.0",
+    "torch",
+    "torchvision",
+    "deepface>=0.0.81",
 ]
+# YOLO Object Detection - Heavy (~500MB)
+yolo = [
+    "ultralytics",
+]
+# Twitter Integration
+twitter = ["tweepy>=4.14.0"]
+# Vehicle Integration (DIMO/Tesla)
+vehicles = [
+    "dimo-python-sdk @ git+https://github.com/openminddev/dimo-python-sdk.git@6b47fcd28654a4145cedee649a0999a8eb08a2f6",
+]
+# Blockchain/Web3
+blockchain = [
+    "web3",
+    "cdp-sdk==0.21.0",
+]
+# Hardware Sensors
+sensors = [
+    "pynmeagps",
+    "bleak",
+    "hid",
+    "pyserial",
+    "pynput>=1.8.1",
+]
+# DDS Middleware (alternative to Zenoh)
+dds = ["cyclonedds==0.10.2"]
+# macOS-specific
 macos = ["osascript"]
+# Robotics - vision + yolo + sensors combined
+robotics = [
+    "opencv-python",
+    "tensorflow>=2.15.0",
+    "tf_keras>=2.15.0",
+    "torch",
+    "torchvision",
+    "deepface>=0.0.81",
+    "ultralytics",
+    "pynmeagps",
+    "bleak",
+    "hid",
+    "pyserial",
+    "pynput>=1.8.1",
+]
+# Full Installation - everything
+full = [
+    "opencv-python",
+    "tensorflow>=2.15.0",
+    "tf_keras>=2.15.0",
+    "torch",
+    "torchvision",
+    "deepface>=0.0.81",
+    "ultralytics",
+    "tweepy>=4.14.0",
+    "dimo-python-sdk @ git+https://github.com/openminddev/dimo-python-sdk.git@6b47fcd28654a4145cedee649a0999a8eb08a2f6",
+    "web3",
+    "cdp-sdk==0.21.0",
+    "pynmeagps",
+    "bleak",
+    "hid",
+    "pyserial",
+    "pynput>=1.8.1",
+    "cyclonedds==0.10.2",
+]
+
+[project.scripts]
+om1 = "cli.main:cli_main"
+
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[tool.hatch.metadata]
+allow-direct-references = true
+
+[tool.hatch.build.targets.wheel]
+packages = ["src/cli", "src/runtime", "src/llm", "src/actions", "src/inputs", "src/providers", "src/backgrounds", "src/simulators", "src/fuser", "src/hooks", "src/zenoh_msgs"]
 
 [dependency-groups]
 dev = [
@@ -104,6 +177,7 @@ dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
 [tool.ruff.lint.per-file-ignores]
 "tests/**" = ["D"]
 "system_hw_test/**" = ["D"]
+"src/cli/main.py" = ["E402"]  # sys.path manipulation must come before imports
 
 [tool.ruff.lint.pydocstyle]
 convention = "numpy"
@@ -112,3 +186,6 @@ convention = "numpy"
 exclude = ["src/unitree/", "src/ubtech/", "system_hw_test/"]
 min_confidence = 80
 paths = ["src"]
+
+[tool.uv]
+package = true
