chore: consolidate env.example into .env.example
- Merge env.example variables into comprehensive .env.example
- Update README.md reference from env.example to .env.example
- Delete redundant env.example file

--- a/.env.example
+++ b/.env.example
@@ -64,6 +64,12 @@ DIMO_API_KEY=
 # Coinbase CDP (for wallet configs)
 # Get key: https://portal.cdp.coinbase.com
 CDP_API_KEY=
+COINBASE_WALLET_ID=
+COINBASE_API_KEY=
+COINBASE_API_SECRET=
+
+# Ethereum wallet integration
+ETH_ADDRESS=
 
 # ===================
 # ROBOTICS
