--- a/env.example
+++ b/env.example
@@ -1,7 +1,7 @@
 # OM1 Environment Configuration
 # Copy this file to .env and fill in your values
 #
-# Quick setup: cp .env.example .env
+# Quick setup: cp env.example .env
 # Then edit .env with your API keys
 
 # ===================
