feat: add Modbus TCP plugin for PLC communication
Add complete Modbus TCP support with three components:
- ModbusProvider: singleton connection manager with client pooling
- ModbusSensor: FuserInput plugin for reading PLC registers
- ModbusWrite: action plugin for writing registers and coils

Includes 60 unit tests, 8 integration tests (pymodbus server),
and pymodbus==3.11.4 dependency.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ dependencies = [
     "torch==2.6.0",
     "torchvision==0.21.0",
     "pyserial==3.5",
+    "pymodbus==3.11.4",
     "py-mjpeg==1.0.1",
     "fastapi==0.115.8",
     "uvicorn==0.34.0",
