--- a/config/modbus_plc.json5
+++ b/config/modbus_plc.json5
@@ -1,5 +1,27 @@
 {
-  // Modbus PLC Controller - Real Hardware Configuration
+  // ============================================================
+  // Modbus PLC Controller - Real Hardware Template
+  // ============================================================
+  //
+  // THIS IS A TEMPLATE. Copy and customize for your specific PLC.
+  // The default values below are examples and will NOT work with
+  // your PLC unless the register map happens to match.
+  //
+  // What you MUST customize:
+  //   1. host/port        - Your PLC's IP address and Modbus TCP port
+  //   2. device_id        - Modbus unit/slave ID of your device
+  //   3. registers[]      - Address, name, scale, unit, data_type for each
+  //                         register. Get this from your PLC's register map
+  //                         (provided by the PLC programmer or manufacturer).
+  //   4. system_prompt     - Describe YOUR process (e.g. water treatment,
+  //                         HVAC, assembly line) so the LLM understands
+  //                         what it's controlling.
+  //   5. system_governance - Safety rules specific to YOUR process.
+  //   6. system_prompt_examples - Example actions matching YOUR register map.
+  //
+  // Supported register types: "holding", "input", "coil", "discrete"
+  // Supported data types: "uint16", "int16", "uint32", "int32", "float32", "bool"
+  // Write format: "register:<address>:<value>" or "coil:<address>:<true|false>"
   //
   // Prerequisites:
   //   1. Real PLC accessible via Modbus TCP (default port 502)
@@ -8,15 +30,17 @@
   // Usage:
   //   uv run src/run.py modbus_plc
   //
-  // Adjust host, port, device_id, and register addresses to match your PLC.
-  // WebSim dashboard available at http://localhost:8000
+  // WebSim monitoring dashboard: http://localhost:8000
 
   version: "v1.0.1",
   hertz: 0.5,
   name: "modbus_plc",
   api_key: "openmind_free",
+  // CUSTOMIZE: Describe your actual process so the LLM understands what it controls.
   system_prompt_base: "You are an industrial PLC controller agent. You monitor a manufacturing process via Modbus sensors and can control actuators. Your goal is to maintain safe operating conditions. You receive periodic sensor readings and can write to PLC registers and coils using the modbus_write action. Always prioritize safety over performance.",
+  // CUSTOMIZE: Define safety rules specific to your process and equipment limits.
   system_governance: "Safety rules:\n1. If temperature exceeds 70C, increase cooling immediately.\n2. If temperature exceeds 80C (ALARM), shut down the process and activate emergency cooling.\n3. Monitor pressure for anomalies and report deviations.\n4. Never exceed actuator limits.\n5. Log all control actions with reasoning.",
+  // CUSTOMIZE: Provide examples using YOUR register addresses and value ranges.
   system_prompt_examples: "Sensor reading example:\nTemperature: 25 C, Pressure: 3.21 bar, Fan Speed: 0 rpm, Motor RPM: 0\n\nAction examples:\n1. Turn motor ON:\n   write_plc: {{'action': 'coil:0:true'}}\n\n2. Set fan speed to 1500 RPM:\n   write_plc: {{'action': 'register:2:1500'}}\n\n3. Emergency stop:\n   write_plc: {{'action': 'coil:0:false'}}\n   write_plc: {{'action': 'register:2:3000'}}",
   agent_inputs: [
     {
@@ -29,7 +53,18 @@
         poll_interval: 2.0,
         descriptor: "PLC Process Sensor (Modbus TCP)",
         registers: [
-          // Adjust addresses, scales, and units to match your PLC register map
+          // REPLACE these with your PLC's actual register map.
+          // Each entry maps a Modbus register to a named sensor value.
+          //
+          // Fields:
+          //   address       - Modbus register address (from PLC docs)
+          //   name          - Human-readable label (shown to LLM)
+          //   register_type - "holding" | "input" | "coil" | "discrete"
+          //   count         - Number of registers to read (default 1, use 2 for 32-bit)
+          //   scale         - Multiply raw value by this (e.g. 0.1 means raw 250 = 25.0)
+          //   offset        - Add after scaling (e.g. scale=0.1, offset=-40 for some temp sensors)
+          //   unit          - Display unit (e.g. "C", "bar", "rpm", "%")
+          //   data_type     - "uint16" | "int16" | "uint32" | "int32" | "float32" | "bool"
           {
             address: 0,
             name: "Temperature",
